# gnome-authenticator

./: .gitlab-ci.yml  Authenticator.doap  Cargo.toml  README.md  meson.build
build-aux/: com.belmoussaoui.Authenticator.Devel.json  dist-vendor.sh
data/: com.belmoussaoui.Authenticator.desktop.in.in  com.belmoussaoui.Authenticator.metainfo.xml.in.in  com.github.bilelmoussaoui.Authenticator.gresource.xml  meson.build  resources.gresource.xml
data/icons/: meson.build
data/resources/gtk/ui/: account_add.ui  window.ui.in
data/resources/ui/: camera.ui  provider_image.ui
debian/: authenticator.1  changelog  clean  control  copyright  gnome-authenticator.lintian-overrides  gnome-authenticator.manpages  rules  salsa-ci.yml  watch
debian/patches/: 0001-Revert-progress_icon-Immediately-redraw-on-accent-co.patch  0002-Revert-progress_icon-Use-adw-StyleManager-to-retriev.patch  0003-Relax-dependency-versions.patch  0004-Make-compatible-with-rust-zip-0.6.patch  0005-Prevent-setting-CARGO_HOME.patch  0006-Extend-test-timeout.patch  0007-test-Prevent-setting-CARGO_HOME.patch  000_fix_gresource.patch  000_handle_svg_removal.patch  001_python38-cleanup.patch  001_qrscanner-svg.patch  002_fix_meson_errors.patch  Relax-data-encoding.patch  prevent-bad-cp.patch  series
debian/source/: lintian-overrides
debian/tests/: control
debian/upstream/: metadata
favicon-scrapper/: Cargo.toml
favicon-scrapper/src/: scrapper.rs
po/: LINGUAS  POTFILES.in  bg.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  he.po  hi.po  hu.po  id.po  ka.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
src/: application.rs
src/Authenticator/models/: __init__.py  camera.py
src/Authenticator/widgets/: provider_image.py  window.py
src/Authenticator/widgets/accounts/: add.py  edit.py  list.py  row.py
src/backup/: raivootp.rs
src/models/: account.rs  otp_uri.rs  provider.rs  search_provider.rs
src/widgets/: camera.rs  error_revealer.rs  progress_icon.rs  url_row.rs  window.rs
src/widgets/accounts/: add.rs  details.rs
src/widgets/preferences/: camera_page.rs  password_page.rs  window.rs
src/widgets/providers/: dialog.rs  image.rs  list.rs  row.rs
