[package]
edition = "2021"
name = "authenticator"
rust-version = "1.70"

[profile.release]
debug = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
adw = {package = "libadwaita", version = "0.7", features = ["v1_6"]}
aes-gcm = "0.10"
anyhow = "1.0"
aperture = "0.7"
ashpd = {version = "0.9", default-features = false, features = ["gtk4", "tokio", "tracing"]}
data-encoding = "2.3"
diesel = {version = "2.0", features = ["sqlite", "r2d2"]}
diesel_migrations = {version = "2.0", features = ["sqlite"]}
favicon-scrapper = {path = "./favicon-scrapper"}
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
gettext-rs = {version = "0.7", features = ["gettext-system"]}
gtk = {package = "gtk4", version = "0.9", features = ["v4_10"]}
hex = {version = "0.4.3", features = ["serde"]}
image = {version = "0.25", default-features = false, features = ["png"]}
once_cell = "1.9"
oo7 = {version = "0.3", default-features = false, features = ["tokio", "native_crypto", "tracing"]}
percent-encoding = "2.1"
prost = "0.13"
qrencode = {version = "0.14", features = ["image"]}
rand = "0.8"
ring = "0.17"
rust-argon2 = {version = "2.0", default-features = false}
scrypt = {version = "0.11", default-features = false}
search-provider = {version = "0.10", default-features = false, features = ["tokio"]}
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.0", default-features = false, features = ["rt-multi-thread", "fs", "io-util"]}
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt"]}
url = "2.2"
uuid = {version = "1.0", features = ["v4"]}
zbar-rust = "0.0"
zeroize = {version = "1", features = ["zeroize_derive"]}
zip = { version = "2.1", features = ["aes-crypto"] }
